[package]
name = "tokio-language-server-protocol"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]

[dependencies]
chomp = "*"
crossbeam = "*"
futures = { git = "https://github.com/alexcrichton/futures-rs" }
mio = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
uuid = { version = "*", features = ["serde", "v4"] }
